--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="menu text-right">
                 <ul>
                     <li>
-                        <a href="#">Home</a>
+                        <a href="#">House</a>
                     </li>
                     <li>
                         <a href="#">About</a>
